--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://anrbl.github.io/react_kitchen_art/"
+  "homepage": "https://anrbl.github.io/pages/"
 }
